@@ -1,45 +1,45 @@
 @echo off
 
-rem jarÆ½¼¶Ä¿Â¼
+rem jarÆ½ï¿½ï¿½Ä¿Â¼
 set AppName=ruoyi-admin.jar
 
-rem JVM²ÎÊý
-set JVM_OPTS="-Dname=%AppName%  -Duser.timezone=Asia/Shanghai -Xms512M -Xmx512M -XX:PermSize=256M -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
+rem JVMï¿½ï¿½ï¿½ï¿½
+set JVM_OPTS="-Dname=%AppName%  -Duser.timezone=Asia/Shanghai -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
 
 
-ECHO. 
-	ECHO.  [1] Æô¶¯%AppName%
-	ECHO.  [2] ¹Ø±Õ%AppName%
-	ECHO.  [3] ÖØÆô%AppName%
-	ECHO.  [4] Æô¶¯×´Ì¬ %AppName%
-	ECHO.  [5] ÍË ³ö 
-ECHO. 
+ECHO.
+	ECHO.  [1] ï¿½ï¿½ï¿½ï¿½%AppName%
+	ECHO.  [2] ï¿½Ø±ï¿½%AppName%
+	ECHO.  [3] ï¿½ï¿½ï¿½ï¿½%AppName%
+	ECHO.  [4] ï¿½ï¿½ï¿½ï¿½×´Ì¬ %AppName%
+	ECHO.  [5] ï¿½ï¿½ ï¿½ï¿½
+ECHO.
 
-ECHO.ÇëÊäÈëÑ¡ÔñÏîÄ¿µÄÐòºÅ:
+ECHO.ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ñ¡ï¿½ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½ï¿½ï¿½:
 set /p ID=
-	IF "%id%"=="1" GOTO start 
-	IF "%id%"=="2" GOTO stop 
-	IF "%id%"=="3" GOTO restart 
+	IF "%id%"=="1" GOTO start
+	IF "%id%"=="2" GOTO stop
+	IF "%id%"=="3" GOTO restart
 	IF "%id%"=="4" GOTO status
 	IF "%id%"=="5" EXIT
-PAUSE 
+PAUSE
 :start
     for /f "usebackq tokens=1-2" %%a in (`jps -l ^| findstr %AppName%`) do (
 		set pid=%%a
 		set image_name=%%b
 	)
 	if  defined pid (
-		echo %%is running 
-		PAUSE 
-	) 
+		echo %%is running
+		PAUSE
+	)
 
-start javaw -jar %JAVA_OPTS% ruoyi-admin.jar
+start javaw %JAVA_OPTS% -jar %AppName%
 
-echo  starting¡­¡­
+echo  startingï¿½ï¿½ï¿½ï¿½
 echo  Start %AppName% success...
 goto:eof
 
-rem º¯ÊýstopÍ¨¹ýjpsÃüÁî²éÕÒpid²¢½áÊø½ø³Ì
+rem ï¿½ï¿½ï¿½ï¿½stopÍ¨ï¿½ï¿½jpsï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½pidï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 :stop
 	for /f "usebackq tokens=1-2" %%a in (`jps -l ^| findstr %AppName%`) do (
 		set pid=%%a
@@ -48,7 +48,7 @@ rem º¯ÊýstopÍ¨¹ýjpsÃüÁî²éÕÒpid²¢½áÊø½ø³Ì
 	if not defined pid (echo process %AppName% does not exists) else (
 		echo prepare to kill %image_name%
 		echo start kill %pid% ...
-		rem ¸ù¾Ý½ø³ÌID£¬kill½ø³Ì
+		rem ï¿½ï¿½ï¿½Ý½ï¿½ï¿½ï¿½IDï¿½ï¿½killï¿½ï¿½ï¿½ï¿½
 		taskkill /f /pid %pid%
 	)
 goto:eof
